public/assets/styl/base/elements.styl
.emoji
	width 1.5rem !important
	height 1.5rem !important
	display inline-block !important
	margin 0 0 -0.4rem 0 !important
	background-size contain !important

.backstretch
	transition left 0.2s ease-in-out

input
textarea
	width 100%
	background none
	border 0
	outline 0
	padding 0.5rem 1rem
	font-style italic

	&:focus
	&:active
		font-style normal
		color $primary-color

.backstretch
	display none

	@media screen and (min-width: $tablet-breakpoint)
		display block

#main-loading
	opacity 0.7
	border-radius 1rem
	padding 3.5rem 1rem 1rem 1rem
	text-align center
	display block
	position fixed
	background $accent-color
	color #000
	font-weight bold
	font-size 1rem
	top 3rem
	left 50%
	width 18rem
	overflow hidden
	text-transform uppercase
	z-index 98
	transform translateX(-50%)
	transform-style preserve-3d
	backface-visibility hidden

	@media screen and (min-width: $desktop-breakpoint)
		top 1.5rem

	.spinner
		opacity 0.5
		position absolute
		bottom -5rem
		margin-left -10rem
		left 50%
		width 20rem
		height 20rem
		background-color #000
		border-radius 100%
		animation scaleout 1.0s infinite ease-in-out
		z-index 1

	.loading-text
		position relative
		z-index 2

#warning
	position fixed
	background $accent-color
	color #000
	padding 1.25rem
	width 31.25rem
	left 50%
	top: 50%;
	z-index 999999
	transform translate(-50%, -50%)
	transform-style preserve-3d
	backface-visibility hidden
	border-radius 1rem

	h3
		font-size 1.4rem
		margin 0
		text-transform uppercase
		font-weight bold

	p
		margin 0.625rem 0
		font-size 1rem
		font-weight bold

	button
		cursor pointer
		color #000
		background none
		display inline-block
		text-transform uppercase
		font-weight bold
		margin 1rem 0.625rem 0 0
		border 1px solid #000
		outline none
		border-radius 1rem
		padding 0.45rem 1rem
		font-size 1rem

@keyframes scaleout
	0%
		transform scale(0.0)
	100%
		transform scale(1.0)
		opacity 0

